# workshop

./: CMakeLists.txt  LICENSE  README.md  main  main.cpp  menu.cpp  run
snippts/: bagunca.cpp  bobleshort.cpp  busca.cpp  clipboard.cpp  dados_mocado.cpp  inclusão.cpp  menu.cpp  set.cpp
snippts/questoes/: Anotações para 03.md  one.cpp  three.cpp  two.cpp
